# LibIPC

./: CMakeLists.txt  LICENSE  README.md  bytebuffer.c  bytebuffer.h  ipc.c  ipc.h  list.c  list.h  mapping.c  mapping.h  platform.c  platform.h  sharedmemory.c  sharedmemory.h  test.c  utils.c  utils.h
