cmake_minimum_required(VERSION 3.23)
project(libipc C)

set(CMAKE_C_STANDARD 99)
add_compile_options(-masm=intel -fasm-blocks)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_compile_definitions(PLATFORM_LINUX)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_compile_definitions(PLATFORM_WINDOWS)
ELSE ()
    add_compile_definitions(PLATFORM_UNKNOWN)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
add_library(ipc SHARED platform.h bytebuffer.c bytebuffer.h ipc.c ipc.h utils.c utils.h list.c list.h mapping.c mapping.h platform.c)
add_executable(IPCTest test.c platform.h bytebuffer.c bytebuffer.h ipc.c ipc.h sharedmemory.c sharedmemory.h utils.c utils.h list.c list.h mapping.c mapping.h platform.c)